--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
 
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
